--- a/verein/satzung.html
+++ b/verein/satzung.html
@@ -49,7 +49,7 @@
 	Geschäftsstelle ist die Adresse des Vorsitzenden. </font></font>
 	</p>
 	</li><li><p style="margin-bottom: 0cm"><font face="Verdana, sans-serif"><font size="3">Der
-	Verein ist unter der Nummer __________ in das Vereinsregister beim
+	Verein ist unter der Nummer <b>3968</b> in das Vereinsregister beim
 	Amtsgericht Stendal eingetragen. </font></font>
 	</p>
 	</li><li><p><font face="Verdana, sans-serif"><font size="3">Das
@@ -586,10 +586,5 @@ wiederaufgenommenen Gründungsversammlung beschlossen. </font></font>
 </p>
 <p style="margin-bottom: 0cm; font-weight: normal" align="LEFT"><br>
 </p>
-<div type="FOOTER">
-	<p style="margin-top: 0.5cm; margin-bottom: 0cm; background: #c0c0c0" align="CENTER">
-	Seite <sdfield type="PAGE" subtype="RANDOM" format="PAGE">12</sdfield> von
-	<sdfield type="DOCSTAT" subtype="PAGE" format="PAGE">12</sdfield></p>
-</div>
 
 </body></html>
