--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <div id="footer">
   <p>
-    <a href="http://freifunk-halle.net">Freifunk Halle</a> | 02:CA:FF:EE:BA:BE | <a href="/impressum.php">Impressum</a>
+    <a href="http://freifunk-halle.org">Freifunk Halle</a> | 02:CA:FF:EE:BA:BE | <a href="/impressum.php">Impressum</a>
   </p>
 </div>
